syntax = "proto3";

package auth;

option go_package = "base/internal/api/auth";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message RegisterResponse {
    string token = 2;
}

message LoginResponse {
    string token = 2;
}
